unpackaged/main/default/objects/PurchaserPlan/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <description>Used in snowflake integration as an external ID</description>
    <externalId>true</externalId>
    <label>Payer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>