unpackaged/main/default/objects/PurchaserPlan/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <description>Used in Snowflake integration as an external ID</description>
    <externalId>true</externalId>
    <label>Plan Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>