unpackaged/main/default/objects/PurchaserPlan/fields/Purchaser_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Plan_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used in Snowflake integration as an external ID</description>
    <externalId>true</externalId>
    <label>Purchaser Plan ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>